--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.1",
     "sweetalert2": "^11.10.4",
     "vue": "^3.3.11",
+    "vue-pagination-2": "^3.1.0",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
   },
