--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hennge/vue3-pagination": "^1.0.17",
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
+    "serve": "^14.2.1",
     "sweetalert2": "^11.10.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
